--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -228,7 +228,8 @@
 
 .thumb-c {
     position: relative;
-    max-height: 70px;
+    width: 70px;
+    height: 70px;
     background: #bdbdbd;
 }
 
