--- a/app/views/static_pages/_results.html.erb
+++ b/app/views/static_pages/_results.html.erb
@@ -1,12 +1,12 @@
-<% if @inquiry.results %>
+<% if @inquiry.results.present? %>
   <%= render 'cover_view/cover_view' %>
   <% if @inquiry.is_more? %>
   <div id="show-more">
     <%= form_tag("/search_games", method: :get, remote: true) do %>
     <%= hidden_field_tag :last_query, @inquiry.query %>
     <%= hidden_field_tag :last_offset, @inquiry.offset %>
-    <%= submit_tag "Load more...",
-    class: "uk-button uk-button-default md-button",
+    <%= submit_tag "Load more",
+    class: "cf-add-button",
     data: { disable_with: "Please wait..." } %>
     <% end %>
   </div>
@@ -24,13 +24,11 @@
     <p>Try using "*" for searching (example: *shadd* > El Shaddai: Ascension of the Metatron)</p>
   </div>
 <% end %>
-
 <div class="scroll-up">
   <a class="scroll-up-button" href="#target"
     uk-icon="icon: arrow-up; ratio: 1.5"
   uk-scroll="duration: 600" style="display: none"></a>
 </div>
-
 <script>
 // Define scroll-up-button position
 if ($('body').hasClass('uk-offcanvas-flip')) {
