Fix: - addl info showing slightly misplaced with cover imagel; - wrong addl info in dev search, - wrong games to update (during full search)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -659,6 +659,7 @@ div.no-results {
     background: #bababa;
     border-radius: 3px;
     box-shadow: -2px 4px 9px 1px #0000004a;
+    img { height: inherit; }
 }
 
 .spinner {
