Add styling to 'I can't show you more'.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -608,7 +608,7 @@ div.no-results {
 }
 
 // Show More Button (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - //
-#show-more {
+#show-more, .no-more {
     text-align: center;
 }
 
