--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,7 @@
   <% if logged_in? %>
   <div class="uk-navbar-right">
     <ul class="uk-navbar-nav">
-      <li><div id="" class="uk-navbar-item nav-but" style="display: none">Hide Overlays</div></li>
+      <li><div id="addl-hide" class="uk-navbar-item nav-but">Hide Overlays</div></li>
       <% extra = 'active' if edit_open %>
       <li><div id="g-show-edit" class="uk-navbar-item nav-but <%= extra %>">Show Options</div></li>
       <li><div id="" class="uk-navbar-item nav-but">Change View</div></li>
@@ -27,6 +27,12 @@
     </ul>
   </div>
   <script>
+
+  var addl_hide = $('#addl-hide');
+  addl_hide.click(function() {
+    $('.addl-info').slideToggle();
+  });
+
   function toggleEditMenu() {
   var g_show = $("#g-show-edit");
   g_show.click(function() {
