Move script showing active collection to menu partial.

--- a/app/views/collections/show.js.erb
+++ b/app/views/collections/show.js.erb
@@ -1,3 +1,1 @@
-$(".m-m").removeClass('active')
-$("#m-<%= @collection.id %>").addClass('active')
-$("#big-c").html("<%= escape_javascript(render partial: 'panels_view/my_games_panels', locals: { collection: @collection }) %>");
+$("#big-c").html("<%= escape_javascript(render partial: 'panels_view/panels', locals: { collection: @collection }) %>");
