Move script showing active collection back to controller.

--- a/app/views/collections/show.js.erb
+++ b/app/views/collections/show.js.erb
@@ -1,1 +1,3 @@
+$(".m-m").removeClass('active');
+$("#m-<%= @collection.id %>").addClass('active');
 $("#big-c").html("<%= escape_javascript(render partial: 'panels_view/panels', locals: { collection: @collection }) %>");
