Add working pagination to my games (panels). Still some problems (deleting games, moving games, editing games, copying to actual collection).

--- a/app/views/panels_view/_panels.html.erb
+++ b/app/views/panels_view/_panels.html.erb
@@ -32,8 +32,10 @@ function shortSummary(id) {
 }
 </script>
 
+<%= js_will_paginate @games %>
+
 <div class="uk-grid-collapse" uk-grid>
-  <% collection.games.each do |game| %>
+  <% @games.each do |game| %>
   <%= render partial: 'panels_view/game_panel', locals: { game: game, collection: collection } %>
   <% end %>
 </div>
