--- a/app/views/static_pages/_logged.html.erb
+++ b/app/views/static_pages/_logged.html.erb
@@ -1,6 +1,9 @@
 <script>
   $(".m-coll").removeClass('active')
   $("#m-<%= @home_collection.id %>").addClass('active')
+
+  $.ajax({ url: '/collections/<%= @home_collection.id %>' });
 </script>
-<%= render partial: 'panels_view/panels', locals: { collection: @home_collection } %>
+
+
 
