Set default scope for CollectionGame. Fix removing games from panels.

--- a/app/views/collections/remove_game.js.erb
+++ b/app/views/collections/remove_game.js.erb
@@ -17,13 +17,22 @@ UIkit.notification({
 });
 
 <% if @success %>
-    var ids = [];
-    var arr = $('.g-drop');
-    arr.each(function() {
-      if ( $( this ).attr('style') == 'display: block;' ) {
-        ids.push($( this ).attr('id'));
-      }
-    });
-    $("#big-c").html("<%= escape_javascript(render partial: 'panels_view/my_games_panels', locals: { collection: @collection }) %>");
-    ids.forEach(id => $('#' + id).show());
+
+    if ($('em.current').length == 0) {
+        $.ajax({ url: '/collections/<%= @collection.id %>' });
+    } else {
+        var current_page = $('em.current').text();
+        var num_of_games = $('.g-panel').length;
+        if (num_of_games == 1) {
+            current_page -= 1;
+        }
+
+        $.ajax({
+            url: '/collections/<%= @collection.id %>',
+            data: {
+                page: current_page
+            }
+        });
+    }
+
 <% end %>
