Fix 1px border (g-menu) problem (disappearing in different zoom options). Fix problem with error handling in edit action. All actions in panels now work. After all actions last visited page (pagination) and game info visibility is restored.

--- a/app/views/collections/show.js.erb
+++ b/app/views/collections/show.js.erb
@@ -1,3 +1,19 @@
 $(".m-m").removeClass('active');
 $("#m-<%= @collection.id %>").addClass('active');
+
+var refresh = eval('<%= @refresh %>')
+if (refresh) {
+  var ids = [];
+  var arr = $('.g-drop');
+  arr.each(function() {
+      if ($(this).attr('style') == 'display: block;') {
+          ids.push($(this).attr('id'));
+      }
+  });
+}
+
 $("#big-c").html("<%= escape_javascript(render partial: 'panels_view/panels', locals: { collection: @collection }) %>");
+
+if (refresh) {
+  ids.forEach(id => $('#' + id).show());
+}
