--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -194,7 +194,7 @@
     top: 0;
     height: 100%;
     width: 5px;
-    border-right: 1px solid $light_grey;
+    border-right: thin solid $light_grey;
 }
 
 .g-menu ul {
