--- a/app/views/collections/remove_game.js.erb
+++ b/app/views/collections/remove_game.js.erb
@@ -17,9 +17,11 @@ UIkit.notification({
 });
 
 <% if @success %>
-
     if ($('em.current').length == 0) {
-        $.ajax({ url: '/collections/<%= @collection.id %>' });
+        $.ajax({
+            url: '/collections/<%= @collection.id %>',
+            data: { type: 'refresh' }
+        });
     } else {
         var current_page = $('em.current').text();
         var num_of_games = $('.g-panel').length;
@@ -30,9 +32,8 @@ UIkit.notification({
         $.ajax({
             url: '/collections/<%= @collection.id %>',
             data: {
-                page: current_page
+                page: current_page, type: 'refresh'
             }
         });
     }
-
 <% end %>
