--- a/app/views/games/copy_move.js.erb
+++ b/app/views/games/copy_move.js.erb
@@ -24,19 +24,23 @@ if (success) {
     UIkit.dropdown("#copy-form-" + game_id).hide();
     <% if @current == @collection %>
         if ($('em.current').length == 0) {
-            $.ajax({ url: '/collections/<%= @current.id %>' });
+            $.ajax({
+             url: '/collections/<%= @current.id %>',
+             data: { type: 'refresh' }
+            });
         } else {
             var current_page = $('em.current').text();
             $.ajax({
                 url: '/collections/<%= @current.id %>',
-                data: {
-                    page: current_page
-                }
+                data: { page: current_page, type: 'refresh' }
             });
         }
     <% elsif !@copy %>
         if ($('em.current').length == 0) {
-            $.ajax({ url: '/collections/<%= @current.id %>' });
+            $.ajax({
+                url: '/collections/<%= @current.id %>',
+                data: { type: 'refresh' }
+             });
         } else {
             var current_page = $('em.current').text();
             var num_of_games = $('.g-panel').length;
@@ -46,9 +50,7 @@ if (success) {
 
             $.ajax({
                 url: '/collections/<%= @current.id %>',
-                data: {
-                    page: current_page
-                }
+                data: { page: current_page, type: 'refresh' }
             });
         }
     <% end %>
