--- a/app/views/panels_view/_panels.html.erb
+++ b/app/views/panels_view/_panels.html.erb
@@ -31,12 +31,33 @@ function shortSummary(id) {
     }
 }
 </script>
+<div class="uk-grid-collapse panels-grid" uk-grid>
 
-<%= js_will_paginate @games %>
 
-<div class="uk-grid-collapse" uk-grid>
+
+<div class="uk-width-5-6 page-links-front">
+
+    <div uk-grid>
+        <div class="page-info">
+        <%= page_entries_info @games %>
+        </div>
+
+        <div class="uk-width-expand page-links">
+        <%= js_will_paginate @games, container: false, previous_label: 'Previous', next_label: 'Next' %>
+        </div>
+    </div>
+
+</div>
+
+
+
   <% @games.each do |game| %>
   <%= render partial: 'panels_view/game_panel', locals: { game: game, collection: collection } %>
   <% end %>
+<div class="uk-width-5-6 page-links">
+        <%= js_will_paginate @games, container: false,
+     previous_label: 'Previous',
+     next_label: 'Next'
+      %>
 </div>
-
+</div>
