--- a/app/views/collections/remove_game.js.erb
+++ b/app/views/collections/remove_game.js.erb
@@ -17,13 +17,14 @@ UIkit.notification({
 });
 
 <% if @success %>
-    if ($('em.current').length == 0) {
+    if ($('.pr em.current').length == 0) {
         $.ajax({
             url: '/collections/<%= @collection.id %>',
             data: { type: 'refresh' }
         });
     } else {
-        var current_page = $('em.current').text();
+        var current_page = $('.pr em.current').text();
+        console.log(current_page);
         var num_of_games = $('.g-panel').length;
         if (num_of_games == 1) {
             current_page -= 1;
