--- a/app/views/games/copy_move.js.erb
+++ b/app/views/games/copy_move.js.erb
@@ -23,26 +23,26 @@ if (msg) {
 if (success) {
     UIkit.dropdown("#copy-form-" + game_id).hide();
     <% if @current == @collection %>
-        if ($('em.current').length == 0) {
+        if ($('.pr em.current').length == 0) {
             $.ajax({
              url: '/collections/<%= @current.id %>',
              data: { type: 'refresh' }
             });
         } else {
-            var current_page = $('em.current').text();
+            var current_page = $('.pr em.current').text();
             $.ajax({
                 url: '/collections/<%= @current.id %>',
                 data: { page: current_page, type: 'refresh' }
             });
         }
     <% elsif !@copy %>
-        if ($('em.current').length == 0) {
+        if ($('.pr em.current').length == 0) {
             $.ajax({
                 url: '/collections/<%= @current.id %>',
                 data: { type: 'refresh' }
              });
         } else {
-            var current_page = $('em.current').text();
+            var current_page = $('.pr em.current').text();
             var num_of_games = $('.g-panel').length;
             if (num_of_games == 1) {
                 current_page -= 1;
