--- a/app/views/panels_view/_panels.html.erb
+++ b/app/views/panels_view/_panels.html.erb
@@ -8,6 +8,7 @@ function moreInfo(id) {
             hidee.show();
             drop.slideDown('fast');
         } else {
+            hidee.hide();
             drop.slideUp('fast');
         }
     });
@@ -31,6 +32,13 @@ function shortSummary(id) {
     }
 }
 </script>
+
+<div class="search-panels">
+  <%= search_form_for(@q, url: collection, remote: true) do |f| %>
+    <%= f.search_field(:name_cont, placeholder: "Name/Developer" , autofocus: "true", autocomplete: "off") %>
+ <% end %>
+</div>
+
 <div class="uk-grid-collapse panels-grid" uk-grid>
     <div class="uk-width-5-6 page-info-front">
         <div uk-grid>
