Add Developer model, developers table, associations with games. Install amoeba gem and use it for duplication of game object. Add working name/developer search. Fix distinct search error.

--- a/app/views/collections/_my_games.html.erb
+++ b/app/views/collections/_my_games.html.erb
@@ -1,6 +1,6 @@
 <div class="search-panels">
   <%= search_form_for(@q, url: collection, remote: true) do |f| %>
-    <%= f.search_field(:name_cont, placeholder: "Name/Developer" , autofocus: "true", autocomplete: "off") %>
+    <%= f.search_field(:name_or_developers_name_cont, placeholder: "Name/Developer" , autofocus: "true", autocomplete: "off") %>
  <% end %>
 </div>
 
