--- a/app/views/collections/_my_games.html.erb
+++ b/app/views/collections/_my_games.html.erb
@@ -1,9 +1,11 @@
 <div class="search-panels">
   <%= search_form_for(@q, url: collection, remote: true) do |f| %>
-    <%= f.search_field(:name_or_developers_name_cont, placeholder: "Name/Developer" , autofocus: "true", autocomplete: "off") %>
+    <%= f.search_field(:name_dev_cont, placeholder: "Name/Developer" , autofocus: "true", autocomplete: "off") %>
+    <%= f.select(:plat_cont, ['xbox', 'playstation'], include_blank: 'Select platform') %>
  <% end %>
 </div>
 
+<div id='my-search' style="display: none;"></div>
 <div class="my-games">
     <%= render partial: 'panels_view/panels', locals: { collection: collection } %>
 </div>
