--- a/app/views/games/copy_move.js.erb
+++ b/app/views/games/copy_move.js.erb
@@ -22,38 +22,39 @@ if (msg) {
 
 if (success) {
     UIkit.dropdown("#copy-form-" + game_id).hide();
+
+    var data = { type: 'refresh' };
+
+    if ($('#my-search').text().length != 0) {
+        search = $('#my-search').text().split(',');
+        data['q'] = { name_dev_cont: search[0], plat_cont: search[1] }
+    }
+
     <% if @current == @collection %>
-        if ($('.pr em.current').length == 0) {
-            $.ajax({
-             url: '/collections/<%= @current.id %>',
-             data: { type: 'refresh' }
-            });
-        } else {
+
+        if ($('.pr em.current').length != 0) {
             var current_page = $('.pr em.current').text();
-            $.ajax({
-                url: '/collections/<%= @current.id %>',
-                data: { page: current_page, type: 'refresh' }
-            });
+            data['page'] = current_page;
         }
+
     <% elsif !@copy %>
-        if ($('.pr em.current').length == 0) {
-            $.ajax({
-                url: '/collections/<%= @current.id %>',
-                data: { type: 'refresh' }
-             });
-        } else {
+
+        if ($('.pr em.current').length != 0) {
             var current_page = $('.pr em.current').text();
             var num_of_games = $('.g-panel').length;
             if (num_of_games == 1) {
                 current_page -= 1;
             }
 
-            $.ajax({
-                url: '/collections/<%= @current.id %>',
-                data: { page: current_page, type: 'refresh' }
-            });
+            data['page'] = current_page;
         }
+
     <% end %>
+
+    $.ajax({
+        url: '/collections/<%= @current.id %>',
+        data: data
+    });
 
 } else {
     $("#copy-form-" + game_id + " .add-form-errors").html("<%= escape_javascript(render partial: 'add_form_errors', locals: { errors: @errors }) %>");
