Add sorting links.

--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -317,7 +317,14 @@ span.gap {
 }
 
 .g-by {
-    margin-top: 0px;
+    margin: 0px;
+}
+
+.g-added {
+    margin: 0px;
+    font-size: 14px;
+    font-style: normal;
+    color: #929292;
 }
 
 .g-nav ul {
